# vllm-grpc-client

./: README.md  pyproject.toml
examples/: 01_basic_completion.py  02_text_decoding.py  03_sampling_parameters.py  04_structured_outputs.py  05_health_and_server_info.py  06_abort_requests.py  07_async_client.py  08_error_handling.py  09_tokenized_input.py  README.md  basic_usage.py
src/vllm_grpc_client/: __init__.py  _client.py  _exceptions.py  _streaming.py  _types.py  utils.py
src/vllm_grpc_client/proto/: __init__.py  vllm_engine.proto  vllm_engine_pb2.py  vllm_engine_pb2.pyi  vllm_engine_pb2_grpc.py
src/vllm_grpc_client/resources/: __init__.py  completions.py  embeddings.py  health.py  models.py
tests/: __init__.py  test_client.py  test_structured_outputs.py
